--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "authors": [
         {
             "name": "Rik Meijer",
-            "email": "rik@nostriphant.dev"
+            "email": "nostriphant@rikmeijer.nl"
         }
     ],
     "minimum-stability": "dev",
